<resources>
    <string name="app_name">Mahsulot</string>
    <string name="asosiy">Asosiy</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="savdo">Savdo</string>
    <string name="kabinet">Kabinet</string>
    <string name="katalog">Katalog</string>
    <string name="izlash">Izlash</string>
    <string name="batafsil">Batafsil</string>
    <string name="sotib_olish">Sotib olish</string>
    <string name="harid_qilish">Harid qilish</string>
    <string name="kataloglar">Kataloglar</string>
    <string name="som">so\'m</string>
    <string name="telefon_raqamingiz">Telefon raqamingiz</string>
    <string name="kodni_olish">Kodni olish</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="tasdiqlash_kodini_kiriting">Tasdiqlash kodini kiriting</string>
    <string name="kod_kelmadi">Kod kelmadi</string>
    <string name="raqamni_o_zgartitirsh">Raqamni o\'zgartitirsh</string>
    <string name="kodni_qayta_so_rash">Kodni qayta so\'rash</string>
    <string name="mavjud_telefon_raqami">Mavjud telefon raqamini kiriting</string>
    <string name="internetga_ulanmagan">Internetga ulanmagan</string>
    <string name="qiziqarli_mahsulotlar">Qiziqarli mahsulotlar</string>
    <string name="barcha_mahsulotlar">Barcha mahsulotlar</string>
    <string name="ilovadan_foydalanish_uchun_internetga_ulaning">Ilovadan foydalanish uchun internetga ulaning</string>
    <string name="tasdiqlash_kodi_ushbu_raqamga_yuborildi">Tasdiqlash kodi ushbu raqamga yuborildi</string>
    <string name="iltimos_tasdiqlash_kodini_toliq_kiriting">Iltimos tasdiqlash kodini to\'liq kiriting</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="familiyangiz">Familiyangiz</string>
    <string name="erkak">Erkak</string>
    <string name="ayol">Ayol</string>
    <string name="tug_ulgan_sanangiz">Tug\'ilgan sanangiz</string>
    <string name="saqlash">Saqlash</string>
    <string name="ismingizni_kiriting">Ismingizni kiriting!</string>
    <string name="familiyangizni_kiriting">Familiyangizni kiriting</string>
    <string name="tugulgan_kuningizni_kiriting">Tug\'ulgan kuningizni kiriting</string>
    <string name="saqlanmoqda">Saqlanmoqda…</string>
    <string name="saqlandi">Saqlandi</string>
    <string name="shaxsiy_ma_lumotlar">Shaxsiy ma\'lumotlar</string>
    <string name="mahsulotlar">Mahsulotlar</string>
    <string name="statistika">Statistika</string>
    <string name="konkurs">Konkurs</string>
    <string name="marja_market">Marja market</string>
    <string name="mablag_ni_yechish">Mablag\'ni yechish</string>
    <string name="chiqish">Chiqish</string>
    <string name="kirish">Kirish</string>
    <string name="royxatdan_otish">Ro\'yxatdan o\'tish</string>
    <string name="ok">OK</string>
    <string name="tizimdan_chiqish">Tizimdan chiqish</string>
    <string name="siz_rostdan_chiqmoqchimisiz">Siz rostdan ham tizimdan chiqmoqchimisiz?</string>
    <string name="profil">Profil</string>
    <string name="hold_balans">Hold Balans</string>
    <string name="marja_balans">Marja Balans</string>
    <string name="siz_sotdingiz">Siz sotdingiz</string>
    <string name="ta">ta</string>
    <string name="yangi">Yangi</string>
    <string name="qabul_qilindi">Qabul qilindi</string>
    <string name="yetkazib_berildi">Yetkazib berildi</string>
    <string name="yetkazilmoqda">Yetkazilmoqda</string>
    <string name="spam">Spam</string>
    <string name="arxiv">Arxiv</string>
    <string name="arxivlanmoqda">Arxivlanmoqda</string>
    <string name="bekor_qilindi">Bekor qilindi</string>
    <string name="qayta_qongiroq">Qayta qo\'ng\'iroq</string>
    <string name="xisobotlar">Xisobotlar</string>
    <string name="reklama_posti">Reklama posti</string>
    <string name="oqim_yaratish">Oqim yaratish</string>
    <string name="narx">Narx</string>
    <string name="bonus">Bonus</string>
    <string name="qoldi">Qoldi</string>
    <string name="marja">Marja</string>
    <string name="url_mavjud_emas">URL mavjud emas!</string>
    <string name="oddiy_sahifa">Oddiy sahifa</string>
    <string name="mahsus_sahifa">Mahsus sahifa</string>
    <string name="oqimlar">Oqimlar</string>
    <string name="sizda_oqimlar_mavjud_emas">Sizda oqimlar mavjud emas</string>
    <string name="sahifa_nusxalandi">Sahifa nusxalandi</string>
    <string name="oqim_yaratildi">Oqim yaratildi</string>
    <string name="oqim_ochirildi">Oqim o\'chirildi</string>
    <string name="oqimni_ochirish">Oqimni o\'chirish</string>
    <string name="siz_rostdan_oqimni_ochirmoq">Siz rostdan ham ushbu oqimni o\'chirmoqchimisiz?</string>
    <string name="malumotlar_topilmadi">Ma\'lumotlar topilmadi!</string>
    <string name="oqimlar_statistikasi">Oqimlar statistikasi</string>
    <string name="statistika_mavjud_emas">Statistika mavjud emas!</string>
    <string name="oqimlar_savdosi">Oqimlar savdosi</string>
    <string name="umumiy_oqimlar">Umumiy oqimlar</string>
    <string name="savdo_boyicha">Haridlar bo\'yicha</string>
    <string name="soni">Soni</string>
    <string name="holati">Holat</string>
    <string name="mahsulot">Mahsulot</string>
    <string name="narxi">Narxi</string>
    <string name="izoh">Izoh</string>
    <string name="sana">Sana</string>
    <string name="savdo_tarixi">Savdo tarixi</string>
    <string name="mablag_miqdori">Mablag\' miqdori</string>
    <string name="karta_raqami">Karta raqami</string>
    <string name="bajarilmoqda">Bajarilmoqda</string>
    <string name="sorov_yuborildi">So\'rov yuborildi</string>
    <string name="karta_raqamini_toliq_kiriting">Karta raqamini to\'liq kiriting!</string>
    <string name="sorovingiz_qabul_qilindi">So\'rovingiz qabul qilindi</string>
    <string name="kamida_40000_yechishingiz_mumkin">Kamida 40,000 so\'m yechishingiz mumkin</string>
    <string name="orqaga">Orqaga</string>
    <string name="xatolik">Xatolik</string>
    <string name="muvaffaqiyatli">Muvaffaqiyatli</string>
    <string name="to_lovlar_tarixi">To\'lovlar tarixi</string>
    <string name="miqdor">Miqdor</string>
    <string name="hisob_raqam">Hisob raqam</string>
    <string name="tolovlar_amalga_oshirilmagan">Pul o\'tkazmalari amalga oshirilmagan</string>
    <string name="viloyatingizni_tanlang">Viloyatingizni tanlang</string>
    <string name="sizning_ma_lumotlaringiz">Sizning ma\'lumotlaringiz</string>
    <string name="mahsulot_haqida">Mahsulot haqida</string>
    <string name="buyurtma_haqida">Buyurtma haqida</string>
    <string name="buyurtma_berish">Buyurtma berish</string>
    <string name="mahsulot_nomi">Mahsulot nomi</string>
    <string name="umumiy_narx">Umumiy narx</string>
    <string name="mahsulot_soni">Mahsulot soni</string>
    <string name="buyurtmangiz_qabul_qilindi">Buyurtmangiz qabul qilindi! Haridingiz uchun rahmat</string>
    <string name="malumotlar_yangilandi">Ma\'lumotlar yangilandi</string>
    <string name="hozircha_marjalar_mavjud_emas">Hozircha marja mahsulotlar mavjud emas</string>
    <string name="boshlanish_sanasi">Boshlanish sanasi</string>
    <string name="yakunlanish_sanasi">Yakunlanish sanasi</string>
    <string name="konkurs_natijalari">Konkurs natijalari</string>
    <string name="orin">O\'rin</string>
    <string name="sotuvchi">Sotuvchi</string>
    <string name="sotildi">sotildi</string>
    <string name="hozircha_konkurslar_mavjud_emas">Hozircha konkurslar mavjud emas</string>
    <string name="oddiy_telegram_posti">Oddiy telegram posti</string>
    <string name="mahsus_telegram_posti">Mahsus telegram posti</string>
    <string name="jami">Jami</string>
    <string name="nomi">Nomi</string>
    <string name="tashrif">Tashrif</string>
    <string name="qayta_qo_ng_iroq">Qayta qo\'ng\'iroq</string>
    <string name="nosoz_mahsulot">Nosoz mahsulot</string>
    <string name="arxivlandi">Arxivlandi</string>
    <string name="buyirtmachi">Buyirtmachi</string>
    <string name="manzil">Manzil</string>
    <string name="oqim">Oqim</string>
    <string name="operator">Operator</string>
</resources>