<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/adapter_stat_numbers"
                    style="@style/tableTextStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="#"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_Nomi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/nomi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_tashrif"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/tashrif"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_yangi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/yangi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_qabulqilindi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/qabul_qilindi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_yetkazilmoqda"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/yetkazilmoqda"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_yetkazib_berildi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/yetkazib_berildi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_qayta_qongiroq"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/qayta_qo_ng_iroq"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_nosoz_mahsulot"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/nosoz_mahsulot"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_bekor_qilindi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/bekor_qilindi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_spam"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/spam"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_arxivlanmoqda"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/arxivlanmoqda"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/adapter_stat_arxivlandi"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/arxivlandi"
                    android:textAlignment="center"
                    android:textColor="@color/white" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stream_statistic_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="horizontal"
                tools:listitem="@layout/adapter_stream_statistics" />
        </LinearLayout>


    </HorizontalScrollView>


    <ProgressBar
        android:id="@+id/stream_statistic_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/stream_statistic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>