<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/light_blue"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_tartib_raqami"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="#"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_operator"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/operator"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_Nomi"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/oqim"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_buyurtmachi"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buyirtmachi"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_manzil"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/manzil"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_holat"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/holati"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_izoh"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/izoh"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/adapter_stat_sana"
                    android:padding="4dp"
                    style="@style/tableTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sana"
                    android:gravity="center"
                    android:textAlignment="center"/>




            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stream_statistic_sold_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="horizontal"
                tools:listitem="@layout/adapter_sold_stream_statistics" />
        </LinearLayout>


    </HorizontalScrollView>


    <ProgressBar
        android:id="@+id/stream_statistic_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/stream_statistic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>